--- a/src/app/shop/products/product/product.component.html
+++ b/src/app/shop/products/product/product.component.html
@@ -1,1 +1,7 @@
-<p>product works!</p>
+
+
+<section class="single-product padding-50">
+    <div class="container">
+        {{ product | json }}
+    </div>
+</section>
