--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -30,7 +30,7 @@
 
         </div>
     </nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light padding-10 menu-cont">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white padding-10 menu-cont">
         <div class="container">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
