--- a/src/app/shop/categories/categories.component.html
+++ b/src/app/shop/categories/categories.component.html
@@ -1,1 +1,6 @@
-<p>categories works!</p>
+
+<section class="single-category padding-40">
+    <div class="container">
+        
+    </div>
+</section>
