--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,12 @@ body{
     line-height: 24px;
     font-style: normal;
     font-weight: 400;
+    min-height:102vh;
 }
 
-a{
+a, a:hover, a:focus{
     color:#7E7E7E;
+    text-decoration:none;
 }
 
 .padding-10{
@@ -23,6 +25,9 @@ a{
 }
 .padding-40{
     padding:40px 0px;
+}
+.padding-50{
+    padding:50px 0px;
 }
 
 .section-title-area{
