Account, category reload

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,7 +14,7 @@
             <div class="options">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/cuenta/ordenes">
+                        <a class="nav-link" routerLink="/cuenta">
                             <i class="fas fa-user"></i>
                             <span>Account</span>
                         </a>
@@ -35,19 +35,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/luxury-flowers">Luxury Flowers</a>
+                        <a class="nav-link" routerLink="/category/banos">Baños</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/arreglos">Arreglos</a>
+                        <a class="nav-link" routerLink="/category/cerraduras">Cerraduras</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/ramos">Ramos</a>
+                        <a class="nav-link" routerLink="/category/cocinas">Cocinas</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/desayunos">Desayunos</a>
+                        <a class="nav-link" routerLink="/category/electrodomesticos">Electrodomesticos</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/para-el">Para él</a>
+                        <a class="nav-link" routerLink="/category/institucional">Institucional</a>
                     </li>
                 </ul>
             </div>
