--- a/src/app/shop/products/product/product.component.html
+++ b/src/app/shop/products/product/product.component.html
@@ -2,6 +2,44 @@
 
 <section class="single-product padding-50">
     <div class="container">
+
+        <div class="section-title-area">
+            <p [hidden]="!loading" class="loading description">Cargando producto...</p>
+        </div>
+
+        <div class="product-cols" *ngIf="product">
+
+            <div class="image-area">
+                <img [src]="product[0].images[0].src" class="img-fluid" alt="">
+            </div>
+
+            <div class="product-meta">
+
+                <span class="badge bg-dark mb-3">15% menos</span>
+
+                <h1 class="product-title mb-3">{{ product[0].name }}</h1>
+
+                <div class="price-area mb-4" *ngIf="product[0].price">
+
+                    <span class="price mb-1">RD{{ product[0].price | currency }}</span>
+
+                    <div class="old-price-area">
+                        <span class="percent">20% off</span>
+                        <span *ngIf="product[0].regular_price" class="old-price">{{ product[0].regular_price | currency }}</span>
+                    </div>
+
+                </div>
+
+                <div class="product-description mb-4" [innerHTML]="product[0].short_description"></div>
+
+                <div class="product-options">
+                    <input type="number" min="1" max="10" value="1" required class="form-control quantity">
+                    <button class="btn add-to-cart"><i class="fas fa-shopping-cart"></i> Agregar</button>
+                </div>
+
+            </div>
+
+        </div>
         {{ product | json }}
     </div>
 </section>
