--- a/src/app/shop/account/orders/orders.component.html
+++ b/src/app/shop/account/orders/orders.component.html
@@ -1,1 +1,7 @@
-<p>orders works!</p>
+
+
+<div class="section-title-area">
+    <h1 class="section-title mb-4">Órdenes</h1>
+</div>
+
+lista de órdenes
