--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -6,5 +6,55 @@
             <h1 class="section-title mb-3">Carrito</h1>
             <div class="description">Hay 3 productos en tu carrito</div>
         </div>
+
+        <table class="cart-list table mt-4">
+            <thead>
+                <th>
+                    <div class="th-container">
+                        <h5>Product</h5>
+                    </div>
+                </th>
+                <th>
+                    <div class="th-container">
+                        <h5>Precio</h5>
+                    </div>
+                </th>
+                <th>
+                    <div class="th-container">
+                        <h5>Cantidad</h5>
+                    </div>
+                </th>
+                <th>
+                    <div class="th-container">
+                        <h5>Subtotal</h5>
+                    </div>
+                </th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <div class="td-container">
+                            <img src="assets/images/product-1.jpg" class="product-image" alt="">
+                            <h5><a href="">Field Roast Chao Cheese Creamy Original</a></h5>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="td-container">
+                            $2.51
+                        </div>
+                    </td>
+                    <td>
+                        <div class="td-container">
+                            <input type="number" min="1" max="10" class="form-control">
+                        </div>
+                    </td>
+                    <td>
+                        <div class="td-container">
+                            $2.51
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </section>
