--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,98 @@ a, a:hover, a:focus{
     font-size:1.2em;
     font-weight: 700;
 }
+
+
+/* ---- Product Loop ---- */
+.products-loop{
+    position: relative;
+    display:flex;
+    flex-wrap:wrap;
+}
+.products-loop article{
+    position: relative;
+    flex:0.1 0 24.24%;
+    padding:0px 15px 20px 15px;
+    border: 1px solid #efefef;
+    border-radius: 20px;
+    margin:0px 1% 30px 0px;
+    transition:all 0.2s;
+    overflow:hidden;
+    height:fit-content;
+}
+.products-loop article:hover{
+    border-color:#e1dfdf;
+}
+.products-loop article .image-area .tag{
+    background-color: #3BB77E;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 9px 22px;
+    border-radius: 15px 0 20px 0;
+    z-index:100;
+}
+.products-loop article .image-area img{
+    transition:all 0.2s;
+}
+.products-loop article:hover .image-area img{
+    transform:scale3d(1.05, 1.05, 1.05) translateZ(0);
+}
+.products-loop article .image-area .category{
+    display:block;
+    color:#adadad;
+}
+.products-loop article .product-title a, .products-loop article .price-area .price{
+    color: #253D4E;
+    font-weight: 700;
+    line-height: 1.2;
+}
+.products-loop article .product-title:hover a{
+    color:#3BB77E;
+}
+.products-loop article .product-options{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
+.products-loop article .product-options .price-area .price{
+    display: block;
+    color: #3BB77E;
+    font-size: 1.6em;
+}
+.products-loop article .product-options .price-area .old-price{
+    text-decoration:line-through;
+    font-weight:700;
+}
+
+.add-to-cart{
+    background-color:#DEF9EC;
+    color:#3BB77E;
+}
+.add-to-cart:hover{
+    background-color:#3BB77E;
+    color:#fff;
+}
+.add-to-cart i{
+    margin-right:4px;
+}
+
+@media screen and (min-width:1100px){
+    .products-loop article:nth-of-type(4n+4){
+        margin-right:0;
+    }
+}
+
+
+@media screen and (max-width:1100px){
+    .products-loop article{
+        flex:0.1 0 32%;
+    }
+}
+
+@media screen and (max-width:992px){
+    .products-loop article{
+        flex:0.1 0 100%;
+    }
+}
