Section products by cat, related products, top on click

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,5 @@
 
+
+<app-products-by-cat [cat-title]="'Greferías'" [cat-slug]="'duchas-de-mano'"></app-products-by-cat>
+
 <app-featured-products></app-featured-products>
