--- a/src/app/shared/loop/products-by-cat/products-by-cat.component.html
+++ b/src/app/shared/loop/products-by-cat/products-by-cat.component.html
@@ -1,9 +1,9 @@
 
-<section class="part-featured-products padding-50">
+<section class="part-category-products padding-50">
     <div class="container">
 
         <div class="section-title-area mb-5">
-            <h3 class="section-title">Productos destacados</h3>
+            <h3 class="section-title">{{ catTitle }}</h3>
             <p [hidden]="!loading" class="description mt-3 loading">Cargando productos...</p>
         </div>
 
@@ -14,7 +14,6 @@
                         <div class="tag">Sale</div>
                         <img [src]="product.images[0].src" class="img-fluid" alt="">
                     </a>
-                    <span class="category mb-2">{{ product.categories[0].name }}</span>
                 </div>
                 <h4 class="product-title mb-3"><a [routerLink]="['/product', product.slug]">{{ product.name }}</a></h4>
 
