--- a/src/app/shop/account/account-details/account-details.component.html
+++ b/src/app/shop/account/account-details/account-details.component.html
@@ -1,1 +1,55 @@
-<p>account-details works!</p>
+<p [hidden]="!loading">Cargando datos...</p>
+
+<form *ngIf="customer">
+
+    <div class="input-row two">
+        <div class="form-group">
+            <label for="name">Nombre</label>
+            <input type="text" name="name" class="form-control" id="name" [value]="customer.first_name" required>
+        </div>
+        <div class="form-group">
+            <label for="lastname">Apellido</label>
+            <input id="lastname" type="text" name="lastname" [value]="customer.last_name" class="form-control" required>
+        </div>
+    </div>
+
+    <div class="input-row">
+        <div class="form-group">
+            <label for="visible-name">Nombre visible</label>
+            <input id="visible-name" type="text" name="visible-name" class="form-control" required>
+        </div>
+    </div>
+
+    <div class="input-row">
+        <div class="form-group">
+            <label for="email">Correo electrónico</label>
+            <input id="email" type="text" name="email" [value]="customer.email" class="form-control" required>
+        </div>
+    </div>
+
+    <h4 class="area-title mt-4 mb-3">Cambiar contraseña</h4>
+
+    <div class="input-row">
+        <div class="form-group">
+            <label for="password">Contraseña actual</label>
+            <input id="password" type="password" name="password" class="form-control">
+        </div>
+    </div>
+
+    <div class="input-row">
+        <div class="form-group">
+            <label for="new-password">Nueva contraseña</label>
+            <input id="new-password" type="password" name="new-password" class="form-control">
+        </div>
+    </div>
+
+    <div class="input-row">
+        <div class="form-group">
+            <label for="new-password-2">Confirmar nueva contraseña</label>
+            <input id="new-password-2" type="password" name="new-password-2" class="form-control">
+        </div>
+    </div>
+
+    <button class="btn btn-primary text-uppercase">Guardar</button>
+
+</form>
