--- a/src/app/shop/account/orders/orders.component.html
+++ b/src/app/shop/account/orders/orders.component.html
@@ -2,6 +2,46 @@
 
 <div class="section-title-area">
     <h1 class="section-title mb-4">Órdenes</h1>
-</div>
 
-lista de órdenes
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Estado</th>
+            <th scope="col">Monto total</th>
+            <th scope="col">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">#31457</th>
+            <td>1 abril, 2021</td>
+            <td>Procesando</td>
+            <td>RD$29.50 para 1 elemento</td>
+            <td><button class="btn btn-light text-uppercase">Ver</button></td>
+          </tr>
+          <tr>
+            <th scope="row">#31457</th>
+            <td>1 abril, 2021</td>
+            <td>Procesando</td>
+            <td>RD$29.50 para 1 elemento</td>
+            <td><button class="btn btn-light text-uppercase">Ver</button></td>
+          </tr>
+          <tr>
+            <th scope="row">#31457</th>
+            <td>1 abril, 2021</td>
+            <td>Procesando</td>
+            <td>RD$29.50 para 1 elemento</td>
+            <td><button class="btn btn-light text-uppercase">Ver</button></td>
+          </tr>
+          <tr>
+            <th scope="row">#31457</th>
+            <td>1 abril, 2021</td>
+            <td>Procesando</td>
+            <td>RD$29.50 para 1 elemento</td>
+            <td><button class="btn btn-light text-uppercase">Ver</button></td>
+          </tr>
+        </tbody>
+      </table>
+</div>
