--- a/src/app/shop/login/login.component.html
+++ b/src/app/shop/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+
+<section class="login-register padding-50">
+    <div class="container">
+
+        <div class="section-title-area text-center mb-4">
+            <h4>Inicia sesión</h4>
+        </div>
+
+        <form>
+            <div class="form-group">
+                <label for="">Correo</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="">Contreseña</label>
+                <input type="password" class="form-control">
+            </div>
+
+            <button class="btn btn-primary w-100 text-uppercase">Enviar</button>
+        </form>
+    </div>
+</section>
