--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,30 @@ a, a:hover, a:focus{
     text-decoration:none;
 }
 
+.btn{
+    border:0;
+}
+.btn.btn-primary{
+    background-color:#3BB77E;
+    color:#fff;
+}
+.btn.btn-primary:hover{
+    background-color:#34a16f;
+}
+
+.form-group{
+    margin-bottom:20px;
+}
+.form-group label{
+    color:#253D4E;
+    font-weight:700;
+}
+
+input.form-control:focus{
+    border-color:#3bb77e;
+    box-shadow:none;
+}
+
 .padding-10{
     padding:10px 0px;
 }
@@ -30,7 +54,8 @@ a, a:hover, a:focus{
     padding:50px 0px;
 }
 
-.section-title-area{
+h1, h2, h3, h4, h5, h6, .section-title-area, .form-group label{
+    color: #253D4E;
     font-family: "Quicksand", sans-serif;
 }
 .section-title{
@@ -41,6 +66,21 @@ a, a:hover, a:focus{
 .section-title-area .description{
     font-size:1.2em;
     font-weight: 700;
+}
+
+/* ---- Store Loop Container ---- */
+.store-loop-container{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+    max-width:1469px;
+    margin:0 auto;
+}
+.store-loop-container .product-filter-container{
+    width:15%;
+}
+.store-loop-container .products-side{
+    width:85%;
 }
 
 
@@ -122,6 +162,33 @@ a, a:hover, a:focus{
 }
 .add-to-cart i{
     margin-right:4px;
+}
+
+/* ---- Account Area ----- */
+.area-title{
+    font-family: "Quicksand", sans-serif;
+    color: #253D4E;
+    font-weight: 700;
+}
+.input-row{
+    margin-bottom:20px;
+    font-family:"Quicksand", sans-serif;
+}
+
+.addresses, .input-row.two{
+    display: flex;
+    justify-content:space-between;
+}
+.input-row.two .form-group{
+    width:48%;
+}
+.title-div{
+    font-weight:700;
+}
+
+.input-row label{
+    margin-bottom:10px;
+    font-weight:700;
 }
 
 @media screen and (min-width:1100px){
