--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,4 @@
 
-
-<app-products-by-cat [cat-title]="'Greferías'" [cat-slug]="'duchas-de-mano'"></app-products-by-cat>
-
 <app-featured-products></app-featured-products>
+
+<app-products-by-cat [cat-title]="'Globos'" [cat-slug]="'globos'"></app-products-by-cat>
