--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -35,19 +35,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/banos">Baños</a>
+                        <a class="nav-link" routerLink="/category/luxury-flowers">Luxury Flowers</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/cerraduras">Cerraduras</a>
+                        <a class="nav-link" routerLink="/category/arreglos-florales">Arreglos</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/cocinas">Cocinas</a>
+                        <a class="nav-link" routerLink="/category/ramos-florales">Ramos</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/electrodomesticos">Electrodomesticos</a>
+                        <a class="nav-link" routerLink="/category/desayunos-y-frutas">Desayunos</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link" routerLink="/category/institucional">Institucional</a>
+                        <a class="nav-link" routerLink="/category/para-el">Para él</a>
                     </li>
                 </ul>
             </div>
