--- a/src/app/shop/products/product/product.component.html
+++ b/src/app/shop/products/product/product.component.html
@@ -41,6 +41,8 @@
 
         </div>
 
+        <!-- Productos relacionados -->
+
         <div class="related-products" *ngIf="relatedProducts">
 
             <div class="section-title-area">
